content/vault/v2.x/content/docs/deploy/kubernetes/kms/setup.mdx
---
layout: docs
page_title: Set up Vault Kubernetes Key Management
description: >-
  Step-by-step instructions for installing Vault Kubernetes Key Management.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2026-06-15T17:29:44+05:30
last_modified: 2026-06-15T21:26:18.000Z
# END AUTO GENERATED METADATA
---

# Set up Vault Kubernetes Key Management


@include '../../../global/partials/alerts/ent/ent-only.mdx'

Set up Vault Kubernetes Key Management to manage encryption keys and use
Vault Enterprise for encryption at rest.

Vault Kubernetes Key Management uses the Transit secrets engine to perform cryptographic
operations on Kubernetes data encryption keys (DEKs). The steps below configure Vault
for use with Vault Kubernetes Key Management.


## Before you start

- You must have a Vault Enterprise server with a valid license.
- You must have permission to enable and configure Vault plugins.
- You must have permission to create and modify Vault policies.
- You must have access, and the ability to make changes, to your Kubernetes
  control plane host.
- You must have permission to modify the Kubernetes API server configuration and
  EncryptionConfig for your Kubernetes cluster.


## Step 1: Configure the Transit plugin 

1. Enable the Transit secret engine. For example, to enable the plugin at the
   path `k8s-transit`:

  ```shell-session
  $ vault secrets enable -path k8s-transit transit

  Success! Enabled the transit secrets engine at: k8s-transit/
  ```

2. Create a named encryption key. For example, to create a key called `kms-kek`:

  ```shell-session
  $ vault write -f k8s-transit/keys/kms-kek

    Key                       Value
    ---                       -----
    allow_plaintext_backup    false
    auto_rotate_period        0s
    deletion_allowed          false
    derived                   false
    exportable                false
    imported_key              false
    keys                      map[1:1773195483]
    latest_version            1
    min_available_version     0
    min_decryption_version    1
    min_encryption_version    0
    name                      kms-kek
    supports_decryption       true
    supports_derivation       true
    supports_encryption       true
    supports_signing          false
    type                      aes256-gcm96
  ```

3. Create an access policy file, `kms-policy.hcl` to control access to the
   encryption key stored by the Transit plugin. For example to create a basic
   policy with the minimum required permissions:

  ```hcl
  path "k8s-transit/keys/kms-kek" {
    capabilities = ["read"]
  }

  path "k8s-transit/encrypt/kms-kek" {
    capabilities = ["update"]
  }

  path "k8s-transit/decrypt/kms-kek" {
    capabilities = ["update"]
  }

  path "sys/license/status" {
    capabilities = ["read"]
  }
  ```

4. Save the policy to Vault. For example, to save the policy as
   `k8s-kms-policy`:

  ```shell-session
  $ vault policy write k8s-kms-policy ./kms-policy.hcl

  Success! Uploaded policy: k8s-kms-policy
  ```

## Step 2: Configure Vault authentication

<Note title="Limited authentication support">

  Currently, Vault Kubernetes Key Management only supports AppRole authentication.

</Note>

<Note title="Cross-namespace authentication (Vault Enterprise)">

  If your AppRole auth method and Transit secrets engine are in different Vault
  namespaces, configure [cross-namespace access](https://developer.hashicorp.com/vault/docs/enterprise/namespaces/configure-cross-namespace-access)
  on the Vault server and then set the `--vault-auth-namespace` flag (or
  `VAULT_KUBE_KMS_VAULT_AUTH_NAMESPACE` environment variable)
  to the namespace containing the AppRole mount. Set `--vault-namespace` to the
  namespace containing the Transit engine. When `--vault-auth-namespace` is omitted,
  both operations use the namespace set by `--vault-namespace`.

</Note>

1. Enable the AppRole plugin:

  ```shell-session
  $ vault auth enable -path k8s-approle approle

  Success! Enabled the approle auth method at: k8s-approle/
  ```

2. Create a named role for authentication that uses your Transit access policy.
   For example, to create a new role called `k8s-kms-role`:

  ```shell-session
  $ vault write                        \
    auth/k8s-approle/role/k8s-kms-role \
    token_policies=k8s-kms-policy

  Success! Data written to: auth/k8s-approle/role/k8s-kms-role
  ```

3. Generate a secret ID for the new role for later use when configuring the
   Vault Kubernetes Key Management static Pod:

  ```shell-session
  $ vault write -f auth/k8s-approle/role/k8s-kms-role/secret-id

    Key                   Value
    ---                   -----
    secret_id             00000000-0000-0000-0000-000000000000
    secret_id_accessor    11111111-1111-1111-1111-111111111111
    secret_id_num_uses    0
    secret_id_ttl         0s
  ```

4. Fetch the role ID associated with the role for later use when configuring the
   Vault Kubernetes Key Management static Pod:

    ```shell-session
    $ vault read auth/k8s-approle/role/k8s-kms-role/role-id

    Key        Value
    ---        -----
    role_id    00000000-0000-0000-0000-000000000000
    ```


## Step 3: Configure Kubernetes

The Vault Kubernetes Key Management process, `vault-kube-kms`, communicates with the kube-apiserver process over a Unix
socket. As a
result, `vault-kube-kms` must run on the control plane node. Choose the deployment model
that matches your environment:
- [Static Pod](https://kubernetes.io/docs/tasks/configure-pod-container/static-pod/) — for nodes with a container runtime (most clusters).
- [systemd service](#systemd-deployment-bare-metal) — for bare-metal or VM nodes without a container runtime.

1. Create an EncryptionConfiguration file, `encryption-config.yaml` for your
   nodes. The `endpoint` value **must exactly match** the socket path where the
   `vault-kube-kms` process listens — set by `--listen-address` (static Pod) or
   `VAULT_KUBE_KMS_LISTEN_ADDRESS` (systemd). The example below uses the static
   Pod path; if you use the [systemd deployment](#systemd-deployment-bare-metal),
   update `endpoint` to match the path in your `vault-kube-kms.env` file. A
   mismatch prevents the Kubernetes API server from starting.

  ```yaml
apiVersion: apiserver.config.k8s.io/v1
kind: EncryptionConfiguration
resources:
  - resources:
      - secrets
    providers:
      - kms:
          apiVersion: v2
          name: vault-kms
          endpoint: unix:///var/run/kmsplugin/kms.sock
          timeout: 3s
      - identity: {}

  ```

2. Save the EncryptionConfiguration file on each control-plane node. Make sure
   to use a path that exists on every control-plane node. We recommend using a
   path like `/etc/kubernetes/encryption/encryption-config.yaml`.

3. Copy the AppRole secret ID from your Transit plugin to each control plane
   node at `/etc/vault-kms/approle-secret-id`.

4. Create a manifest file, `vault-kms-plugin.yaml`, for the `vault-kube-kms`
   process. For example:

  <CodeBlockConfig highlight="13,16-22">

  ```yaml
  apiVersion: v1
  kind: Pod
  metadata:
    name: vault-kms-plugin
    namespace: kube-system
    labels:
      tier: control-plane
      component: vault-kms-plugin
  spec:
    priorityClassName: system-node-critical
    containers:
      - name: vault-kms-plugin
        image: <your_image_reference>
        imagePullPolicy: Never
        args:
          - --vault-address=<your_vault_address>
          - --listen-address=unix:///var/run/kmsplugin/kms.sock
          - --approle-role-id=<approle_id_from_vault>
          - --approle-secret-id-path=/etc/vault-kms/approle-secret-id
          - --vault-key-path=k8s-transit/keys/kms-kek
          - --zap-log-level=info
          # Optional: set --vault-namespace if your Transit engine is in a
          # Vault Enterprise namespace.
          # - --vault-namespace=<transit_namespace>
          # Optional: set --vault-auth-namespace only when AppRole authentication
          # lives in a different Vault namespace from the Transit engine
          # (cross-namespace auth). Omit when both share the same namespace.
          # - --vault-auth-namespace=<auth_namespace>
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 10
        volumeMounts:
          - name: kmsplugin-sockdir
            mountPath: /var/run/kmsplugin
          - name: approle-secret-id
            mountPath: /etc/vault-kms/approle-secret-id
            readOnly: true
        resources:
          requests:
            cpu: 10m
            memory: 32Mi
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true

    volumes:
      - name: kmsplugin-sockdir
        hostPath:
          path: /var/run/kmsplugin
          type: DirectoryOrCreate

      - name: approle-secret-id
        hostPath:
          path: /etc/vault-kms/approle-secret-id
          type: File
  ```
  
  </CodeBlockConfig>

5. Save your manifest file to `/etc/kubernetes/manifests/` on the control-plane
   node where you run your Kubernetes API server. If you run multiple API
   servers, you must deploy the `vault-kube-kms` process on each control-plane node, so
   each Kubernetes API server instance can dial its own local Unix socket.

The kubelet process should find your manifest file and start `vault-kube-kms` as
a static Pod automatically.

### systemd deployment (bare-metal)

Use this model for bare-metal or VM control-plane nodes that do not have a
container runtime. The plugin binary runs as a native systemd service. systemd
manages the process lifecycle — it starts the plugin before `kube-apiserver`,
restarts it automatically on failure, and creates the Unix socket directory via
`RuntimeDirectory=`.

The unit file (`vault-kube-kms.service`) and environment template
(`vault-kube-kms.env`) are included in the release archive under
`config/systemd/`.

1. Install the plugin binary on the control-plane node:

  ```shell-session
  $ install -m 0755 vault-kube-kms /usr/local/bin/vault-kube-kms
  ```

2. Install the systemd unit file:

  ```shell-session
  $ install -m 0444 vault-kube-kms.service \
      /etc/systemd/system/vault-kube-kms.service
  ```

3. Create the configuration directory and install the environment file:

  ```shell-session
  $ mkdir -p /etc/vault-kube-kms
  $ install -m 0600 vault-kube-kms.env \
      /etc/vault-kube-kms/vault-kube-kms.env
  ```

4. Edit `/etc/vault-kube-kms/vault-kube-kms.env` and set the required values:

  ```shell-session
  VAULT_KUBE_KMS_VAULT_ADDRESS=https://vault.example.com:8200
  VAULT_KUBE_KMS_VAULT_KEY_PATH=k8s-transit/keys/kms-kek
  VAULT_KUBE_KMS_APPROLE_ROLE_ID=<role-id-from-step-2>
  VAULT_KUBE_KMS_APPROLE_SECRET_ID_PATH=/etc/vault-kube-kms/approle-secret-id
  VAULT_KUBE_KMS_LISTEN_ADDRESS=unix:///run/vault-kube-kms/vault-kube-kms.sock
  ```

5. Copy the AppRole secret ID from Step 2 to the node:

  ```shell-session
  $ install -m 0600 approle-secret-id \
      /etc/vault-kube-kms/approle-secret-id
  ```

6. Enable and start the service:

  ```shell-session
  $ systemctl daemon-reload
  $ systemctl enable --now vault-kube-kms
  $ systemctl status vault-kube-kms
  ```

  The service must show `active (running)` before you proceed to Step 4.

<Warning>

`VAULT_KUBE_KMS_LISTEN_ADDRESS` in `vault-kube-kms.env` **must match** the
`endpoint:` value in your `EncryptionConfiguration`. The systemd unit creates
`/run/vault-kube-kms/` automatically via `RuntimeDirectory=` — no manual
`mkdir` is needed. Update both files to agree on the same socket path before
enabling encryption in Step 4.

</Warning>

## Step 4: Enable encryption at rest

You must update the Kubernetes API server manifest, `kube-apiserver.yaml`, on
each control-plane to enable encryption at rest.

1. Ensure the `kube-apiserver` container can read your `encryption-config.yaml`
   encryption configuration file at
   `/etc/kubernetes/encryption/encryption-config.yaml`.

2. Update the manifest with a named volume linked to the
   `encryption-config.yaml` file. For example:

  ```yaml
volumes:
  - name: encryption-config
    hostPath:
      path: /etc/kubernetes/encryption/encryption-config.yaml
      type: File
  ```

3. Update the `volumeMounts` stanza in the manifest to mount the
   `encryption-config.yaml` file:

  ```yaml
volumeMounts:
  - name: encryption-config
    mountPath: /etc/kubernetes/encryption/encryption-config.yaml
    readOnly: true
  ```

4. Update the `kube-apiserver` command to add `--encryption-provider-config` and set it to your
   `encryption-config.yaml` file. For example:

  ```yaml
  args:
    ...
    - --encryption-provider-config=/etc/kubernetes/encryption/encryption-config.yaml
    ...
  ```

5. Save the manifest so the kubelet restarts the `kube-apiserver` static Pod.